# RustyTasks

./: .gitignore  Cargo.toml  README.md  autocommit_doc.automerge
src/: cli.rs  crdt.rs  display.rs  identity.rs  main.rs  network.rs  peer.rs  sync.rs  tasks.rs
